# cmake-sdl-setup

./: CMakeLists.txt  notas.txt
src/: main.cpp
